--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.3",
     "vuepress": "^0.14.8",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "jsplumb": "^2.9.2",
+    "vuedraggable": "2.23.0"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
