--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fuse.js": "^3.4.4",
     "hotkeys-js": "^3.6.2",
     "js-cookie": "^2.2.0",
+    "jsplumb": "^2.12.14",
     "lodash": "^4.17.11",
     "lowdb": "^1.0.0",
     "nprogress": "^0.2.0",
@@ -32,10 +33,9 @@
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.3",
+    "vuedraggable": "^2.23.0",
     "vuepress": "^0.14.8",
-    "vuex": "^3.0.1",
-    "jsplumb": "^2.9.2",
-    "vuedraggable": "2.23.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
