--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
+    "ckeditor4-vue": "^0.2.0",
     "core-js": "^2.6.5",
     "dayjs": "^1.8.12",
     "echarts": "^4.3.0",
