完成设备认证注册洁面

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 开发环境
 
 # API接口地址
-VUE_APP_BASE_URL=http://localhost:8002
+VUE_APP_BASE_URL=http://111.231.20.187:8004
 
 # 服务治理地址
 VUE_APP_ADMINSERVER_URL=http://localhost:8003/
