--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "doc:build": "vuepress build docs"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-decoupled-document": "^18.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^18.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.1",
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
     "ckeditor4-vue": "^0.2.0",
